--- a/Dev-Blog/Dev-Blog/wwwroot/css/Posts.css
+++ b/Dev-Blog/Dev-Blog/wwwroot/css/Posts.css
@@ -7,6 +7,21 @@
     margin-bottom: 15px;
 }
 
+/*Delete button */
+#bootstrap-override .delete-form {
+    display: inline-flex;
+}
+
+    #bootstrap-override .delete-form button {
+        border: none;
+        background-color: inherit;
+    }
+
+        #bootstrap-override .delete-form button:hover {
+            color: red;
+        }
+
+/*Comment box*/
 #bootstrap-override .comment-box {
     margin: 0px 15px 15px 15px;
 }
