--- a/Dev-Blog/Dev-Blog/Pages/Status/Posts.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Status/Posts.cshtml
@@ -43,6 +43,9 @@
                                             <button asp-page-handler="Delete" type="submit">
                                                 @{ await Html.RenderPartialAsync("../Icons/_TrashIcon");}
                                             </button>
+                                            <a class="nav-link" asp-page="Edit">
+                                                @{ await Html.RenderPartialAsync("../Icons/_EditIcon");}
+                                            </a>
                                         </form>
                                     }
                                 </div>
