--- a/Dev-Blog/Dev-Blog/Pages/Status/Edit.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Status/Edit.cshtml
@@ -8,11 +8,37 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="~/css/All.css" />
+    <link rel="stylesheet" type="text/css" href="~/css/Posts.css" />
     <title>Status</title>
 </head>
 <body id="bootstrap-override">
     <main id="main">
         <h1>Edit</h1>
+        <form method="post" enctype="multipart/form-data" id="edit-form" class="form-inline">
+            <div class="container">
+                <div class="card">
+                    <div class="card-header">
+                        <span>
+                            Update
+                            <strong>@Model.Post.UpdateNum</strong>
+                        </span>
+                        <div class="float-right">
+                            <strong>@Model.Post.Date.ToShortDateString()</strong>
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <img class="update-img" src=@Model.Post.ImgURL />
+                        <p>@Model.Post.Description</p>
+                        <textarea asp-for="@Model.Description" placeholder="New description here" class="pb-cmnt-textarea"></textarea>
+
+                        <input hidden asp-for=@Model.Post.Id>
+                        <input hidden type="datetime" asp-for=@Model.Post.Date>
+                        <input hidden type="text" asp-for=@Model.Post.ImgURL>
+                        <input hidden type="text" asp-for=@Model.Post.UpdateNum>
+                        <button class="btn btn-primary" type="submit" style="display: block">Update</button>
+                    </div>
+                </div>
+            </div>
+        </form>
     </main>
 </body>
