--- a/Dev-Blog/Dev-Blog/Pages/Status/Posts.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Status/Posts.cshtml
@@ -60,16 +60,22 @@
                                 <!--Delete Comment Button-->
                                 foreach (var comment in post.Comments)
                                 {
-                                    <form method="post" class="delete-form">
-                                        <div class="posted-comments comment-box" style="padding: 7.5px">
-                                            <p>@comment.UserName - @comment.Date.ToString("MM/dd/yyyy hh:mm tt")
-                                            <p>@comment.Content</p>
-                                            <input hidden asp-for=@comment.Id>
-                                            <button type="submit" class="float-right" asp-page-handler="DeleteComment">
-                                                @{ await Html.RenderPartialAsync("../Icons/_TrashIcon");}
-                                            </button>
+                                    <div class="posted-comments comment-box" style="padding: 7.5px">
+                                        <span class="comment-username">@comment.UserName</span>
+                                        <div class="float-right">
+                                            <span>@comment.Date.ToString("MM/dd/yyyy hh:mm tt")</span>
+                                            <form method="post" class="delete-form">
+                                                @if (User.Identity.Name == Model.AdminUser)
+                                                {
+                                                    <input hidden asp-for=@comment.Id>
+                                                    <button type="submit" asp-page-handler="DeleteComment">
+                                                        @{ await Html.RenderPartialAsync("../Icons/_TrashIcon");}
+                                                    </button>
+                                                }
+                                            </form>
                                         </div>
-                                    </form>
+                                        <p>@comment.Content</p>
+                                    </div>
                                 }
                             }
                             <div class="comment-box form-group">
