--- a/Dev-Blog/Dev-Blog/wwwroot/css/Posts.css
+++ b/Dev-Blog/Dev-Blog/wwwroot/css/Posts.css
@@ -45,6 +45,10 @@
         margin-top: 10px;
     }
 
+#bootstrap-override .comment-username {
+    color: rgb(125, 125, 125);
+}
+
 #bootstrap-override .update-img {
     height: 432px;
     width: 768px;
