--- a/Dev-Blog/Dev-Blog/Pages/Shared/_Header.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Shared/_Header.cshtml
@@ -3,8 +3,8 @@
 @model Dev_Blog.Models.Base.BasePage
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark indigo">
-        <a class="navbar-brand" asp-page="/Index">the Dev Blog</a>
         <img src="~/Imgs/Logo.png" height="115" width="100" />
+        <a class="navbar-brand" asp-page="/Index">the Dev Blog</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -18,7 +18,7 @@
                     <a class="nav-link" asp-page="/Status/Posts">Status</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" asp-page="/Bio/Bio">My Bio</a>
+                    <a class="nav-link" asp-page="/Bio/Bio">Creator</a>
                 </li>
             </ul>
             <div class="collapse navbar-collapse justify-content-end float-right">
