Add thumbs up / thumbs down icons.

--- a/Dev-Blog/Dev-Blog/Pages/Status/Posts.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Status/Posts.cshtml
@@ -51,6 +51,8 @@
                             <div class="card-body">
                                 <img class="update-img" src=@post.ImgURL />
                                 <p>@post.Description</p>
+                                <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span>
+                                <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"></span>
                             </div>
 
                             @if (post.Comments != null)
