Add vote table.

--- a/Dev-Blog/Dev-Blog/Pages/Status/_VotingSystem.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Status/_VotingSystem.cshtml
@@ -3,3 +3,9 @@
     <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span>
     <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"></span>
 </form>
+
+<script type="text/javascript">
+    $(function () {
+
+    })
+</script>
