--- a/Dev-Blog/Dev-Blog/Pages/Status/Posts.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Status/Posts.cshtml
@@ -72,7 +72,7 @@
                                 foreach (var comment in post.Comments)
                                 {
                                     <div class="posted-comments comment-box" style="padding: 7.5px">
-                                        <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+                                        <span class="user-icon glyphicon glyphicon-user" aria-hidden="true"></span>
                                         <span class="comment-username">@comment.UserName</span>
                                         <div class="float-right">
                                             <span>@comment.Date.ToString("MM/dd/yyyy hh:mm tt")</span>
