--- a/Dev-Blog/Dev-Blog/Pages/Index.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Index.cshtml
@@ -25,10 +25,15 @@
                             <strong>@Model.Post.UpdateNum</strong>
                         </span>
                         <strong class="float-right">@Model.Post.Date.ToShortDateString()</strong>
+                    </div>
+                    <div class="card-body">
+                        <img id="update-img" src=@Model.Post.ImgURL />
+                        <p>@Model.Post.Description</p>
 
-                        <div class="card-body">
-                            <img id="update-img" src=@Model.Post.ImgURL />
-                            <p>@Model.Post.Description</p>
+                        <hr />
+
+                        <div class="m-auto embed-responsive-16by9 embed-responsive">
+                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/9ou1pl0XNRs"></iframe>
                         </div>
                     </div>
                 </div>
