Fix logout button.

--- a/Dev-Blog/Dev-Blog/Pages/Shared/_Header.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Shared/_Header.cshtml
@@ -30,9 +30,11 @@
                                 <a class="nav-link disabled">Welcome @User.Claims.First(x => x.Type == "UserName").Value </a>
                             </li>
                             <li class="nav-item">
-                                <form asp-page="/Account/Logout" method="post">
-                                    <button id="logout-button" class="nav-link" type="submit">Logout</button>
-                                </form>
+                                <a class="nav-link">
+                                    <form asp-page="/Account/Logout" method="post">
+                                        <button id="logout-button" type="submit">Logout</button>
+                                    </form>
+                                </a>
                             </li>
                         }
                         else
