Center home page image.

--- a/Dev-Blog/Dev-Blog/Pages/Index.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Index.cshtml
@@ -26,7 +26,7 @@
                         </span>
                         <strong class="float-right">@Model.Post.Date.ToShortDateString()</strong>
                     </div>
-                    <div class="card-body">
+                    <div class="card-body text-center">
                         <img id="update-img" src=@Model.Post.ImgURL />
                         <p>@Model.Post.Description</p>
 
