--- a/Dev-Blog/Dev-Blog/Pages/Index.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Index.cshtml
@@ -36,6 +36,9 @@
                             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/9ou1pl0XNRs"></iframe>
                         </div>
                     </div>
+                    <div class="card-footer">
+                        <h2>Have a suggestion? Leave a comment!</h2>
+                    </div>
                 </div>
             </div>
         }
