--- a/Dev-Blog/Dev-Blog/Pages/Index.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Index.cshtml
@@ -36,8 +36,14 @@
                             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/9ou1pl0XNRs"></iframe>
                         </div>
                     </div>
-                    <div class="card-footer">
-                        <h2>Have a suggestion? Leave a comment!</h2>
+                    <div class="card-footer text-center">
+                        <h4>Have a suggestion? Leave a comment!</h4>
+                        <form method="post">
+                            <textarea asp-for=@Model.Context placeholder="Put suggestion here.." class="pb-cmnt-textarea d-block"></textarea>
+                            <button class="btn btn-primary" asp-page-handler="Suggestion" type="submit">
+                                Submit
+                            </button>
+                        </form>
                     </div>
                 </div>
             </div>
