--- a/Dev-Blog/Dev-Blog/wwwroot/css/Home.css
+++ b/Dev-Blog/Dev-Blog/wwwroot/css/Home.css
@@ -14,6 +14,16 @@
     background: #dddddd;
 }
 
+/*Suggestion Box*/
+#bootstrap-override .card-footer h4 {
+    font-family: 'Press Start 2P', cursive;
+}
+
+#bootstrap-override .card-footer textarea {
+    margin: 0px auto 15px;
+    width: 70%;
+}
+
 @media screen and (max-width: 975px) {
     #bootstrap-override #update-img {
         height: 360px;
@@ -32,5 +42,10 @@
     #bootstrap-override #update-img {
         height: 234px;
         width: 416px;
+    }
+
+    #bootstrap-override .card-footer textarea {
+        margin: 0px auto 15px;
+        width: 100%;
     }
 }
