--- a/Dev-Blog/Dev-Blog/Pages/Status/Posts.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Status/Posts.cshtml
@@ -81,9 +81,9 @@
                                 {
                                     <form method="post">
                                         <textarea asp-for=@Model.Comment.Content class="form-control" placeholder="comment..." rows="2" id="comment"></textarea>
-                                        <input hidden asp-for="@post.Id" />
-                                        @*<button id="clickMe" class="btn btn-secondary" type="submit">Comment</button>*@
-                                        <button class="btn btn-secondary" type="submit" asp-page-handler="Comment">Comment</button>
+                                        <input id="postId" hidden asp-for="@post.Id" value=@post.Id />
+                                        <button id="commentBtn" class="btn btn-secondary" type="submit">Comment</button>
+                                        @*<button class="btn btn-secondary" type="submit" asp-page-handler="Comment">Comment</button>*@
                                     </form>
                                 }
                                 else
@@ -96,50 +96,57 @@
                 }
             }
         </div>
-        <div id="test">
-        </div>
-        <div class="form-group">
-            <button id="clickMe" type="submit" class="btn">Click me</button>
-        </div>
     </main>
     <script>
-        $(function () {
-            $("#clickMe").click(function () {
+        @*$(document).ready(function () {
+
+            $('#commentBtn').on("click", function () {
+
+            var comment = {
+                PostId: $('#postId').val(),
+                Content: $('#comment').val()
+            };
+
+                var comment = {
+                    PostId: 10,
+                    Content: "This is a test"
+                };
+
                 $.ajax({
-                    type: "GET",
-                    url: "@Url.Action("AjaxThing", "AjaxController")",
-                    data: JSON.stringify("Andrew"),
-                    @*dataType: "json",*@
+                    type: "POST",
+                    url: "@Url.Action("Index", "Ajax")",
+                    url: "/Ajax/Index",
+                    contentType: "application/json; charset=utf-8",
+                    data: comment
+                    async: true,
                     cache: false,
-                    success: function (response) {
-                        alert("Worked");
-                        alert(response)
-                        $("#test").html("Courtney");
+                    success: function (data) {
+                        alert("Success");
                     },
                     error: function (jqXHR, textStatus, errorThrown) {
-                        alert("Nope");
-                        alert(textStatus + "\n" + errorThrown.toString());
+                        alert("Failure");
+                    }
+                });
+            });
+        });*@
+
+        $(document).ready(function () {
+            $('#commentBtn').on("click", function () {
+                var comment = {
+                    PostId: 10,
+                    Content: "This is a test"
+                }
+
+                $.ajax({
+                    type: "POST",
+                    url: "@Url.Action("Post", "Ajax")",
+                    data: JSON.stringify(comment),
+                    dataType: "json",
+                    success: function (data) {
+                        alert("Success!");
                     }
                 });
             });
         });
-
-        @*function test() {
-            $.ajax({
-                type: "POST",
-                url: @Url.Action("AjaxThing", "Posts"),
-                data: "Andrew",
-                success: function () {
-                    alert("hello");
-                    $("#test").html("hello");
-
-                },
-                error: function (jqXHR, textStatus, errorThrown) {
-                    alert(errorThrown);
-                }
-            });
-        }*@
-
-        @*$("#clickMe").on("click", test);*@
     </script>
 </body>
