Change route name.

--- a/Dev-Blog/Dev-Blog/Pages/Status/Posts.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Status/Posts.cshtml
@@ -116,7 +116,7 @@
                 $.ajax({
                     contentType: "application/json; charset=utf-8",
                     type: "POST",
-                    url: "/Test",
+                    url: "/PostComment",
                     data: JSON.stringify(comment),
                     dataType: "json",
                     success: function (data, status) {
